<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_read_settings"
            android:icon="@mipmap/ic_settings"
            android:title="@string/read_settings" />
        <item
            android:id="@+id/nav_random"
            android:icon="@mipmap/ic_random"
            android:title="@string/random" />
        <item
            android:id="@+id/nav_prev"
            android:icon="@mipmap/ic_prev"
            android:title="@string/prev" />
        <item
            android:id="@+id/nav_today"
            android:enabled="false"
            android:icon="@mipmap/ic_today"
            android:title="@string/today" />

        <item
            android:id="@+id/nav_next"
            android:enabled="false"
            android:icon="@mipmap/ic_next"
            android:title="@string/next" />
    </group>
</menu>
